@@ -346,6 +346,22 @@ static void check_inline_pictures(vt_term_t *term, u_int8_t *flags, int beg, int
   }
 }
 
+static void check_inline_pictures_drcs(vt_term_t *term, u_int8_t *flags) {
+  vt_drcs_t *drcs;
+
+  if ((drcs = term->parser->drcs)) {
+    size_t count;
+
+    for (count = 0; count < sizeof(drcs->fonts) / sizeof(drcs->fonts[0]); count++) {
+      if (drcs->fonts[count] && vt_drcs_has_picture(drcs->fonts[count])) {
+        flags[drcs->fonts[count]->pic_id] = 1;
+
+        /* animation check is not necessary. */
+      }
+    }
+  }
+}
+
 static int cleanup_inline_pictures(vt_term_t *term) {
 #define THRESHOLD 48
   int count;
@@ -403,6 +419,8 @@ static int cleanup_inline_pictures(vt_term_t *term) {
     }
 
     term->screen->edit = orig_edit;
+
+    check_inline_pictures_drcs(term, flags);
   }
 
   empty_idx = -1;
